less/fileinput.less
// fileinput.less
// CSS for file upload button and fileinput widget
// ------------------------------------------------

.btn-file {
  overflow: hidden;
  position: relative;
  vertical-align: middle;
  > input {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    opacity: 0;
    filter: alpha(opacity=0);
    transform: translate(-300px, 0) scale(4);
    font-size: 23px;
    direction: ltr;
    cursor: pointer;
  }
}

.fileinput {
  margin-bottom: 9px;
  display: inline-block;
  .form-control {
    margin-bottom: 0px;
    vertical-align: middle;
    cursor: text;
  }
  .thumbnail {
    overflow: hidden;
    display: inline-block;
    margin-bottom: 5px;
    vertical-align: middle;
    text-align: center;
    > img {
      max-height: 100%;
    }
  }
  .btn {
    vertical-align: middle;
  }
}
.fileinput-exists .fileinput-new,
.fileinput-new .fileinput-exists {
  display: none;
}
.fileinput-inline .fileinput-controls {
  display: inline;
}
.fileinput .form-control {
  white-space: normal;
}
.fileinput-new .input-group {
  #fileinput > .input-group-size(@border-radius-base);
  &.input-group-sm {
    #fileinput > .input-group-size(@border-radius-small);
  }
  &.input-group-lg {
    #fileinput > .input-group-size(@border-radius-large);
  }
}
.form-group.has-warning .fileinput {
  #fileinput > .context(@state-warning-text, @state-warning-text);
}
.form-group.has-error .fileinput {
  #fileinput > .context(@state-danger-text, @state-danger-text);
}
.form-group.has-success .fileinput {
  #fileinput > .context(@state-success-text, @state-success-text);
}
.input-group-addon:not(:first-child) {
  border-left: 0;
}
#fileinput {
  .context(@context-text-color, @context-border-color) {
    .form-control {
      color: @context-text-color;
      border-color: @context-border-color;
    }
    .fileinput-preview {
      color: @context-text-color;
    }
    .thumbnail {
      border-color: @context-border-color;
    }
  }
  .input-group-size(@border-radius) {
    .input-group-addon + .form-control {
      .border-left-radius(@border-radius);
    }
    .input-group-addon {
      .border-right-radius(@border-radius);
    }
  }
}

